Fixed #1361 (Habanero.BO : Bug with CustomPropType that uses a TypeConverter)
Previous fix to Bug #1360 (Bug with CustomProperty cannot set default) refactored common code to all use the BOPropDataMapper.TryParsePropValue

This change therefore consisted of Updating the BOPropGeneralDataMapper.cs to use the TypeConverter if one is defined and it CanConvertFrom the value.

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -154,6 +154,7 @@
     <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Events.cs" />
     <Compile Include="BusinessObjectLoader\TestBusinessObjectLoaderInMemory.cs" />
     <Compile Include="BusinessObjectLoader\TestBusinessObjectLoaderMultiSource.cs" />
+    <Compile Include="ClassDefinition\TestBOPropGeneralDataMapper.cs" />
     <Compile Include="ClassDefinition\TestClassDefHelper.cs" />
     <Compile Include="ClassDefinition\TestDefClassFactory.cs" />
     <Compile Include="ClassDefinition\TestFilterDef.cs" />
