Worked on #1367 (Support for Simple Value Objects in Habanero) Created a ValueObject Abstract Class and Added tests for The PropDef.IsValid

--- a/source/Habanero.Base/Habanero.Base.csproj
+++ b/source/Habanero.Base/Habanero.Base.csproj
@@ -362,6 +362,7 @@
     <Compile Include="Util\TypeUtilities.cs" />
     <Compile Include="Util\Utilities.cs" />
     <Compile Include="Util\XmlDocumentValidator.cs" />
+    <Compile Include="ValueObject.cs" />
     <Compile Include="XMLWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
