--- a/source/Habanero.Db/Habanero.Db.csproj
+++ b/source/Habanero.Db/Habanero.Db.csproj
@@ -1,236 +1,107 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
+﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
-    <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.30729</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ApplicationIcon>
-    </ApplicationIcon>
-    <AssemblyKeyContainerName>
-    </AssemblyKeyContainerName>
-    <AssemblyName>Habanero.DB</AssemblyName>
-    <AssemblyOriginatorKeyFile>key.snk</AssemblyOriginatorKeyFile>
-    <DefaultClientScript>JScript</DefaultClientScript>
-    <DefaultHTMLPageLayout>Grid</DefaultHTMLPageLayout>
-    <DefaultTargetSchema>IE50</DefaultTargetSchema>
-    <DelaySign>false</DelaySign>
+    <ProductVersion>9.0.30729</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{47FDF59D-7304-4883-AC23-129ED1BF1908}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Habanero.DB</RootNamespace>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-    <StartupObject>
-    </StartupObject>
-    <FileUpgradeFlags>
-    </FileUpgradeFlags>
-    <UpgradeBackupLocation>
-    </UpgradeBackupLocation>
-    <SignAssembly>true</SignAssembly>
-    <OldToolsVersion>3.5</OldToolsVersion>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Habanero.Db</RootNamespace>
+    <AssemblyName>Habanero.Db</AssemblyName>
+    <ProjectTypeGuids>{4D628B5B-2FBC-4AA6-8C16-197242AEB884};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
+    <PlatformFamilyName>WindowsCE</PlatformFamilyName>
+    <PlatformID>E2BECB1F-8C8C-41ba-B736-9BE7D946A398</PlatformID>
+    <OSVersion>5.0</OSVersion>
+    <DeployDirSuffix>Habanero.Db</DeployDirSuffix>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
-    <PublishUrl>publish\</PublishUrl>
-    <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
-    <UpdateMode>Foreground</UpdateMode>
-    <UpdateInterval>7</UpdateInterval>
-    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
-    <UpdatePeriodically>false</UpdatePeriodically>
-    <UpdateRequired>false</UpdateRequired>
-    <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
-    <UseApplicationTrust>false</UseApplicationTrust>
-    <BootstrapperEnabled>true</BootstrapperEnabled>
-    <TargetFrameworkProfile />
+    <NativePlatformName>Windows CE</NativePlatformName>
+    <FormFactorID>
+    </FormFactorID>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>bin\Debug\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <DocumentationFile>bin\Debug\Habanero.DB.XML</DocumentationFile>
     <DebugSymbols>true</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <Optimize>false</Optimize>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
-    <WarningLevel>4</WarningLevel>
     <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE;$(PlatformFamilyName)</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
     <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <FileAlignment>512</FileAlignment>
+    <WarningLevel>4</WarningLevel>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
-    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
-    <BaseAddress>285212672</BaseAddress>
-    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
-    <ConfigurationOverrideFile>
-    </ConfigurationOverrideFile>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile>
-    </DocumentationFile>
-    <DebugSymbols>false</DebugSymbols>
-    <FileAlignment>4096</FileAlignment>
-    <NoStdLib>false</NoStdLib>
-    <NoWarn>
-    </NoWarn>
-    <Optimize>true</Optimize>
-    <RegisterForComInterop>false</RegisterForComInterop>
-    <RemoveIntegerChecks>false</RemoveIntegerChecks>
-    <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
+    <DefineConstants>TRACE;$(PlatformFamilyName)</DefineConstants>
+    <NoStdLib>true</NoStdLib>
+    <NoConfig>true</NoConfig>
+    <ErrorReport>prompt</ErrorReport>
+    <FileAlignment>512</FileAlignment>
     <WarningLevel>4</WarningLevel>
-    <DebugType>none</DebugType>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <DocumentationFile>bin\Debug\Habanero.DB.XML</DocumentationFile>
-    <FileAlignment>4096</FileAlignment>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <OutputPath>bin\x86\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <BaseAddress>285212672</BaseAddress>
-    <Optimize>true</Optimize>
-    <FileAlignment>4096</FileAlignment>
-    <PlatformTarget>x86</PlatformTarget>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.0.30714, Culture=neutral, PublicKeyToken=b32731d11ce58905">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\lib\log4net.dll</HintPath>
-    </Reference>
-    <Reference Include="System">
-      <Name>System</Name>
-    </Reference>
-    <Reference Include="System.configuration" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data">
-      <Name>System.Data</Name>
-    </Reference>
-    <Reference Include="System.Drawing">
-      <Name>System.Drawing</Name>
-    </Reference>
-    <Reference Include="System.Xml">
-      <Name>System.XML</Name>
-    </Reference>
+    <Reference Include="mscorlib" />
+    <Reference Include="System" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Common\AssemblyInfoShared.cs">
+      <Link>Properties\AssemblyInfoShared.cs</Link>
+    </Compile>
     <Compile Include="BusinessObjectLoaderDB.cs" />
     <Compile Include="ConcurrencyControl\OptimisticLockingVersionNumberDB.cs" />
     <Compile Include="ConcurrencyControl\PessimisticLockingDB.cs" />
     <Compile Include="ConnectionStringAccess2007Factory.cs" />
+    <Compile Include="ConnectionStringAccessFactory.cs" />
     <Compile Include="ConnectionStringDB4OFactory.cs" />
+    <Compile Include="ConnectionStringFactory.cs" />
     <Compile Include="ConnectionStringFirebirdEmbeddedFactory.cs" />
     <Compile Include="ConnectionStringFirebirdFactory.cs" />
+    <Compile Include="ConnectionStringMySQLFactory.cs" />
+    <Compile Include="ConnectionStringOracleFactory.cs" />
     <Compile Include="ConnectionStringPostgreSqlFactory.cs" />
     <Compile Include="ConnectionStringSQLiteFactory.cs" />
+    <Compile Include="ConnectionStringSQLServerFactory.cs" />
     <Compile Include="CriteriaDB.cs" />
     <Compile Include="DataAccessorDB.cs" />
+    <Compile Include="Database.cs" />
+    <Compile Include="DatabaseConfig.cs" />
+    <Compile Include="DatabaseConnection.cs" />
+    <Compile Include="DatabaseConnectionAccess.cs" />
     <Compile Include="DatabaseConnectionAccess2007.cs" />
+    <Compile Include="DatabaseConnectionException.cs" />
+    <Compile Include="DatabaseConnectionFactory.cs" />
     <Compile Include="DatabaseConnectionFirebird.cs" />
+    <Compile Include="DatabaseConnectionMySQL.cs" />
+    <Compile Include="DatabaseConnectionOracle.cs" />
     <Compile Include="DatabaseConnectionPostgreSql.cs" />
     <Compile Include="DatabaseConnectionSQLite.cs" />
+    <Compile Include="DatabaseConnectionSQLServer.cs" />
     <Compile Include="DatabaseLookupList.cs" />
+    <Compile Include="DatabaseNumberGenerator.cs" />
+    <Compile Include="DatabaseReadException.cs" />
+    <Compile Include="DatabaseSettings.cs" />
+    <Compile Include="DatabaseWriteException.cs" />
+    <Compile Include="DbMigrator.cs" />
     <Compile Include="DeleteStatementGenerator.cs" />
     <Compile Include="IDatabaseConnectionCreator.cs" />
     <Compile Include="InsertSqlStatement.cs" />
     <Compile Include="InsertStatementGenerator.cs" />
     <Compile Include="NumberGenerator\NumberGeneratorPessimisticLocking.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="..\Common\AssemblyInfoShared.cs">
-      <Link>Properties\AssemblyInfoShared.cs</Link>
-    </Compile>
-    <Compile Include="ConnectionStringAccessFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ConnectionStringFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ConnectionStringMySQLFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ConnectionStringOracleFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ConnectionStringSQLServerFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="Database.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConfig.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnection.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnectionAccess.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnectionException.cs" />
-    <Compile Include="DatabaseConnectionFactory.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnectionMySQL.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnectionOracle.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseConnectionSQLServer.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseNumberGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseReadException.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseSettings.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DatabaseWriteException.cs">
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="DBMigrator.cs" />
-    <Compile Include="ParameterNameGenerator.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="ParameterNameGenerator.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectQueryDB.cs" />
     <Compile Include="SourceDB.cs" />
     <Compile Include="SqlFormatterForAccess.cs" />
-    <Compile Include="SqlStatement.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="SQLStatement.cs" />
     <Compile Include="SqlStatementBuilder.cs" />
-    <Compile Include="SqlStatementCollection.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="SqlStatementCollection.cs" />
     <Compile Include="SqlStatementException.cs" />
     <Compile Include="StatementGeneratorUtils.cs" />
     <Compile Include="TransactionalBusinessObjectDB.cs" />
@@ -239,52 +110,31 @@
     <Compile Include="TransactionCommitterDB.cs" />
     <Compile Include="TransactionLogTable.cs" />
     <Compile Include="UpdateStatementGenerator.cs" />
-    <Compile Include="XmlDatabaseConfig.cs">
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="key.snk" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
-      <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
-      <Name>Habanero.Base</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
-      <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
-      <Name>Habanero.BO</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
-      <Install>false</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
-      <Visible>False</Visible>
-      <ProductName>.NET Framework 3.5 SP1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.VisualBasic.PowerPacks.10.0">
-      <Visible>False</Visible>
-      <ProductName>Microsoft Visual Basic PowerPacks 10.0</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
-    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
-      <Visible>False</Visible>
-      <ProductName>Windows Installer 3.1</ProductName>
-      <Install>true</Install>
-    </BootstrapperPackage>
+    <Compile Include="XmlDatabaseConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="key.snk" />
   </ItemGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PreBuildEvent>
-    </PreBuildEvent>
-    <PostBuildEvent>"$(SolutionDir)PostBuild.cmd" "$(SolutionDir)"  "$(TargetDir)"</PostBuildEvent>
-  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
+      <Project>{75043A90-2D88-43A0-8C64-EA51B6B2826A}</Project>
+      <Name>Habanero.Base</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <Import Project="$(MSBuildBinPath)\Microsoft.CompactFramework.CSharp.targets" />
+  <ProjectExtensions>
+    <VisualStudio>
+      <FlavorProperties GUID="{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}">
+        <HostingProcess disable="1" />
+      </FlavorProperties>
+    </VisualStudio>
+  </ProjectExtensions>
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+       Other similar extension points exist, see Microsoft.Common.targets.
+  <Target Name="BeforeBuild">
+  </Target>
+  <Target Name="AfterBuild">
+  </Target>
+  -->
 </Project>
