--- a/source/Habanero.Test.Db/Habanero.Test.Db.csproj
+++ b/source/Habanero.Test.Db/Habanero.Test.Db.csproj
@@ -2,7 +2,7 @@
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <ProjectType>Local</ProjectType>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{1484CDE2-0A30-466F-9FEA-E79CE2751489}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -158,29 +158,21 @@
     <Reference Include="System.Xml">
       <Name>System.XML</Name>
     </Reference>
-    <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
-      <Project>{9ED22DDE-ED14-43CA-807A-D0A42DFBF322}</Project>
-      <Name>Habanero.BO</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Habanero.Db\Habanero.DB.csproj">
-      <Project>{80FEC63C-DBD7-4DAE-882D-9CB93F738B48}</Project>
-      <Name>Habanero.DB</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Habanero.Base\Habanero.Base.csproj">
-      <Project>{D04BB138-C144-4406-9A41-17192E7D44BF}</Project>
+      <Project>{75043A90-2D88-43A0-8C64-EA51B6B2826A}</Project>
       <Name>Habanero.Base</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Habanero.Test.Bo\Habanero.Test.BO.csproj">
-      <Project>{D624008C-47BA-44CC-9CC8-DCEC9F0005B3}</Project>
-      <Name>Habanero.Test.BO</Name>
+    <ProjectReference Include="..\Habanero.Bo\Habanero.BO.csproj">
+      <Project>{F214D8D4-F00F-46E7-8167-86331E5398DB}</Project>
+      <Name>Habanero.BO</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Habanero.Db\Habanero.Db.csproj">
+      <Project>{47FDF59D-7304-4883-AC23-129ED1BF1908}</Project>
+      <Name>Habanero.Db</Name>
     </ProjectReference>
     <ProjectReference Include="..\Habanero.Test.Structure\Habanero.Test.Structure.csproj">
       <Project>{D59DAD41-663F-4AD7-9B22-04C2A7D7F9C2}</Project>
       <Name>Habanero.Test.Structure</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Habanero.Test\Habanero.Test.csproj">
-      <Project>{B965CBBC-48BE-4761-9AB8-8F1AD17B8537}</Project>
-      <Name>Habanero.Test</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
