--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -48,6 +48,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="nmock, Version=1.0.2735.26971, Culture=neutral, PublicKeyToken=824173e82b3e3b0d, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\nmock.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.5.3.9345, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\nunit.framework.dll</HintPath>
@@ -65,6 +69,30 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="BOTestUtils.cs" />
+    <Compile Include="Loaders\TestClassDefsXmlValidator.cs" />
+    <Compile Include="Loaders\TestDtdLoader.cs" />
+    <Compile Include="Loaders\TestDtdsResource.cs" />
+    <Compile Include="Loaders\TestXmlBusinessObjectLookupListLoader.cs" />
+    <Compile Include="Loaders\TestXmlClassDefsLoader.cs" />
+    <Compile Include="Loaders\TestXmlClassLoader.cs" />
+    <Compile Include="Loaders\TestXmlDatabaseLookupListLoader.cs" />
+    <Compile Include="Loaders\TestXmlFilterLoader.cs" />
+    <Compile Include="Loaders\TestXmlKeyLoader.cs" />
+    <Compile Include="Loaders\TestXmlPrimaryKeyLoader.cs" />
+    <Compile Include="Loaders\TestXmlPropertyLoader.cs" />
+    <Compile Include="Loaders\TestXmlPropertyRuleLoader.cs" />
+    <Compile Include="Loaders\TestXmlPropertyRuleLoader_ClassDefOnly.cs" />
+    <Compile Include="Loaders\TestXmlRelationshipLoader.cs" />
+    <Compile Include="Loaders\TestXmlSimpleLookupListLoader.cs" />
+    <Compile Include="Loaders\TestXmlSuperClassLoader.cs" />
+    <Compile Include="Loaders\TestXmlTriggerLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIFormColumnLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIFormFieldLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIFormLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIFormTabLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIGridColumnLoader.cs" />
+    <Compile Include="Loaders\TestXmlUIGridLoader.cs" />
+    <Compile Include="Loaders\TestXmlUILoader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBOError.cs" />
     <Compile Include="TestBoPropString.cs" />
