--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -77,6 +77,21 @@
       <Link>Properties\AssemblyInfoShared.cs</Link>
     </Compile>
     <Compile Include="BOTestUtils.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_AddedBOs.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_CreateBO.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Edits.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Event.cs" />
+    <Compile Include="BusinessObjectCollection\TestBusinessObjectCollection_Events.cs" />
+    <Compile Include="BusinessObjectCollection\TestOrderCriteria.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBoCol_Added.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Aggregation.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Association.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Composition.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBOCol_Created.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBoCol_Edits.cs" />
+    <Compile Include="BusinessObjectCollection\TestRelatedBusinessObjectCollection.cs" />
+    <Compile Include="BusinessObjectCollection\TestUtilsRelated.cs" />
     <Compile Include="ClassDefinition\TestBOPropGeneralDataMapper.cs" />
     <Compile Include="ClassDefinition\TestClassDef.cs" />
     <Compile Include="ClassDefinition\TestClassDefCol.cs" />
