Added relationship tests

--- a/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
+++ b/source/Habanero.Test.Bo/Habanero.Test.Bo.csproj
@@ -180,6 +180,23 @@
     <Compile Include="PropRule\TestPropRuleLong.cs" />
     <Compile Include="PropRule\TestPropRuleSingle.cs" />
     <Compile Include="PropRule\TestPropRuleString.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Aggregation.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Association.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Base.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipCancelEdits_Composition.cs" />
+    <Compile Include="Relationship\TestMultipleRelationshipDef.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Aggregation.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Association.cs" />
+    <Compile Include="Relationship\TestMultipleRelationship_Composition.cs" />
+    <Compile Include="Relationship\TestRelationship.cs" />
+    <Compile Include="Relationship\TestRelationshipCol.cs" />
+    <Compile Include="Relationship\TestRelProp.cs" />
+    <Compile Include="Relationship\TestSingleRelationship.cs" />
+    <Compile Include="Relationship\TestSingleRelationship_Aggregation.cs" />
+    <Compile Include="Relationship\TestSingleRelationship_Association.cs" />
+    <Compile Include="Relationship\TestSingleRelationship_Composition.cs" />
+    <Compile Include="Relationship\TestTransactionalSingleRelationship.cs" />
     <Compile Include="TestBOError.cs" />
     <Compile Include="TestBoProp.cs" />
     <Compile Include="TestBoPropString.cs" />
